@startuml
class Person{
    private $name;
    private $job;
    __construct($name, $job)
    introduce()

}
class Teacher{
    private $subject;
    __construct($name, $job,$subject)
    introduce()
}

class Cock{
    private $specialties;
    __construct($name, $job,$specialties) 
    introduce()
}

Person <|-- Teacher
Person <|-- Cock

@enduml